@@ -1,3 +1,10 @@
+2008-10-06  Michael Snyder  <msnyder@vmware.com>
+
+        * infrun.c (handle_inferior_event): Formatting, spelling fix.
+
+	* infrun.c (handle_inferior_event): Add special case for
+	"next" in reverse.
+
 2008-10-04  Hui Zhu  <teawater@gmail.com>
 
 	Change from "to_prepare_to_store" to "to_store_registers".
